# esp32-mod-player

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  idf_component.yml
examples/mod-player/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/mod-player/main/: CMakeLists.txt  main.cpp
examples/mod-player/mod/: popcor10.mod
